--- a/data-raw/PCOD-3CD/DESCRIPTION.yaml
+++ b/data-raw/PCOD-3CD/DESCRIPTION.yaml
@@ -1,5 +1,5 @@
-ID: PCOD-5ABCD-2018
+ID: PCOD-3CD-2018
 Species: Gadus macrocephalus
 Common name: Pacific Cod
-Stock: 5ABCD
+Stock: 3CD
 Note: Summarized from ensemble MCMCs of 7 models
