--- a/data-raw/PCOD-3CD/DESCRIPTION.yaml
+++ b/data-raw/PCOD-3CD/DESCRIPTION.yaml
@@ -2,4 +2,4 @@ ID: PCOD-3CD-2018
 Species: Gadus macrocephalus
 Common name: Pacific Cod
 Stock: 3CD
-Note: Summarized from ensemble MCMCs of 7 models
+Note: Summarized from ensemble MCMCs of 7 models; LRP is biomass in 1986.
