Update plots; arrange text

--- a/text/makefile
+++ b/text/makefile
@@ -1,9 +1,8 @@
-TEXT = gf2021-sopo
 REFS = refs
 
-all: $(TEXT).pdf
+all: gf2022-sopo.pdf
 
-%.pdf: %.Rmd $(REFS).bib csas.csl ../figs/ridges.pdf ../figs/ts-summary.pdf
-	Rscript -e "rmarkdown::render('gf2021-sopo.Rmd')"
+gf2022-sopo.pdf: gf2022-sopo.Rmd $(REFS).bib csas.csl ../figs/ridges.png ../figs/ts-summary.png ../figs/stock-vs-indices.png
+	Rscript -e "rmarkdown::render('gf2022-sopo.Rmd')"
 continuous:
 	while true; do make --silent; sleep 0.25; done
